--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 200, 200, 200;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
@@ -28,5 +28,8 @@ body {
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+  .text-heading {
+    color: rgb(var(--foreground-rgb));
   }
 }
